# python-project-83

./: .gitignore  Makefile  README.md  conftest.py  database.sql  env.example  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: lint-pip.yml  lint.yml  sonar.yml
page_analyzer/: __init__.py  app.py  database.py  page_parser.py  url_utils.py
page_analyzer/templates/: base.html  index.html  url_show.html  urls.html
tests/: conftest.py  test_app.py
