[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer Flask Application"
authors = [
    {name = "Hexlet", email = "support@hexlet.io"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "flask>=3.0.0",
    "gunicorn>=21.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "ruff>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"] 
